--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -18,6 +18,10 @@
     background-clip: content-box;
 }
 
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-muted); /* Darker on hover */
+}
+
 .custom-allscrollbar {
     scrollbar-width: none;
 }
